--- a/loginwindow.ui
+++ b/loginwindow.ui
@@ -82,6 +82,19 @@
     </rect>
    </property>
   </widget>
+  <widget class="QPushButton" name="drawAVL">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>240</y>
+     <width>80</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>AVL演示</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
