--- a/person_specific.ui
+++ b/person_specific.ui
@@ -107,10 +107,36 @@
   <widget class="QLabel" name="friends">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>150</x>
      <y>150</y>
-     <width>341</width>
-     <height>71</height>
+     <width>361</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>220</y>
+     <width>51</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>共同粉丝</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="fans">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>220</y>
+     <width>381</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
