--- a/playavl.ui
+++ b/playavl.ui
@@ -6,23 +6,58 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>542</width>
-    <height>512</height>
+    <width>898</width>
+    <height>569</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QWidget" name="horizontalLayoutWidget">
+  <widget class="QPushButton" name="insertBtn">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>491</width>
-     <height>471</height>
+     <x>130</x>
+     <y>520</y>
+     <width>71</width>
+     <height>31</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="hLayout"/>
+   <property name="text">
+    <string>插入</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="removeBtn">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>520</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>删除</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="addEdit">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>520</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="removeEdit">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>520</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
   </widget>
  </widget>
  <resources/>
