--- a/person_specific.ui
+++ b/person_specific.ui
@@ -95,7 +95,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>140</y>
+     <y>150</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -108,9 +108,9 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>150</y>
+     <y>160</y>
      <width>361</width>
-     <height>51</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="text">
@@ -133,10 +133,10 @@
   <widget class="QLabel" name="fans">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>140</x>
      <y>220</y>
-     <width>381</width>
-     <height>41</height>
+     <width>391</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="text">
@@ -147,7 +147,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>290</y>
+     <y>280</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -159,10 +159,36 @@
   <widget class="QLabel" name="attentions">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>300</y>
-     <width>371</width>
-     <height>41</height>
+     <x>140</x>
+     <y>290</y>
+     <width>381</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>120</y>
+     <width>41</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>关注数</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="attentionCount">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>120</y>
+     <width>61</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
