--- a/playavl.ui
+++ b/playavl.ui
@@ -29,7 +29,7 @@
   <widget class="QPushButton" name="removeBtn">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>330</x>
      <y>520</y>
      <width>71</width>
      <height>31</height>
@@ -52,11 +52,76 @@
   <widget class="QLineEdit" name="removeEdit">
    <property name="geometry">
     <rect>
-     <x>330</x>
+     <x>250</x>
      <y>520</y>
      <width>81</width>
      <height>31</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="interBtn">
+   <property name="geometry">
+    <rect>
+     <x>420</x>
+     <y>520</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>交</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="unionBtn">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>520</y>
+     <width>51</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>并</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="differBtn">
+   <property name="geometry">
+    <rect>
+     <x>550</x>
+     <y>520</y>
+     <width>51</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>差</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="resetBtn">
+   <property name="geometry">
+    <rect>
+     <x>750</x>
+     <y>520</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>还原</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="isSubBtn">
+   <property name="geometry">
+    <rect>
+     <x>610</x>
+     <y>520</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>是否为子集</string>
    </property>
   </widget>
  </widget>
